<resources>
    <string name="app_name">HealthApp</string>
    <string name="action_settings">Settings</string>
    <string name="close_drawer">close_drawer</string>
    <string name="open_drawer">open_drawer</string>
    <string name="menu_home_str">首页资讯</string>
    <string name="menu_zice_str">健康自测</string>
    <string name="menu_drugs_str">药品查询</string>
    <string name="menu_store_str">附近药店</string>
    <string name="menu_footprint_str">每日足迹</string>
    <string name="menu_login_str">点击登录</string>
    <string name="content_detail">文章详情</string>
    <string name="account">账号</string>
    <string name="account_hint">请输入账号</string>
    <string name="password_hint">密码</string>
    <string name="please_input_password">请输入密码</string>
    <string name="regist">注册</string>
    <string name="login">登录</string>
    <string name="subject">专题</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
