<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/srl_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/login_toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/color_title_bar"
        app:navigationIcon="@drawable/icon_back"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:titleTextColor="@android:color/white"
        app:title="@string/login" />

    <dym.unique.com.springinglayoutlibrary.viewgroup.SpringingLinearLayout
        android:id="@+id/sll_mainContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <dym.unique.com.springinglayoutlibrary.view.SpringingImageView
            android:id="@+id/simg_avatarMan"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:src="@drawable/mmj"
            android:visibility="invisible" />

        <LinearLayout
            android:id="@+id/ll_account"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:visibility="invisible">

            <dym.unique.com.springinglayoutlibrary.view.SpringingTextView
                android:id="@+id/stv_accountLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/account"
                android:textColor="#666666"
                android:textSize="16sp" />

            <dym.unique.com.springinglayoutlibrary.view.SpringingEditText
                android:id="@+id/sedt_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:hint="@string/account_hint"
                android:inputType="number"
                android:textColor="#666666"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_password"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:visibility="invisible">

            <dym.unique.com.springinglayoutlibrary.view.SpringingTextView
                android:id="@+id/stv_passwordLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/password_hint"
                android:textColor="#666666"
                android:textSize="16sp" />

            <dym.unique.com.springinglayoutlibrary.view.SpringingEditText
                android:id="@+id/sedt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:hint="@string/please_input_password"
                android:inputType="textPassword"
                android:textColor="#666666"
                android:textSize="18sp" />
        </LinearLayout>

        <dym.unique.com.springinglayoutlibrary.view.SpringingTextView
            android:id="@+id/stv_login"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/drawable_regist_background"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:visibility="invisible" />

        <dym.unique.com.springinglayoutlibrary.view.SpringingTextView
            android:id="@+id/stv_regist"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/drawable_login_background"
            android:gravity="center"
            android:text="@string/regist"
            android:textColor="@color/color_title_bar"
            android:textSize="18sp"
            android:visibility="invisible" />


    </dym.unique.com.springinglayoutlibrary.viewgroup.SpringingLinearLayout>

</LinearLayout>